# ratus

./: .gitignore  .goreleaser.yml  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  README.md  README.rst  go.mod  go.sum  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml  pythonpublish.yml
cmd/ratus/: main.go
command/: commands.go
docs/source/: conf.py  evaluation.rst  execution.rst  index.rst  parsing.rst  tokenisation.rst
executor/: exec.go
parse/: parse.go
parser/: parse.go
ratus/: __init__.py  execer.py  parse.py
src/ratus/: __init__.py  exec.py  parse.py  token.py
test_files/: fun.rts  hello.rts  invalid.rts
tests/: test_exec.py  test_parse.py  test_ratus.py  test_token.py
tokeniser/: tokenise.go
