[tool.poetry]
name = "ratus"
version = "0.0.1"
description = "Simple expression language."
authors = ["Nick Spain <nicholas.spain96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = "*"
isort = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
