[tool.poetry]
name = "ratus"
version = "0.0.1"
description = "Simple expression language."
authors = ["Nick Spain <nicholas.spain96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest-cov = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = "19.10b0"
isort = "4.3.21"
sphinx = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
